# rs-tool-call

./: .env.example  Cargo.toml  Dockerfile  README.md
frontend/: README.md  app.js  index.html  styles.css
scripts/: deploy.sh
src/: channel.rs  config.rs  engine.rs  http_api.rs  logging.rs  main.rs  models.rs  session_store.rs  tools.rs
src/capability/: conversation.rs  extraction.rs  learning.rs  media_translate.rs  mod.rs  sessions.rs  tools.rs
src/channel/: types.rs
src/channel/feishu/: callback.rs  im.rs  mod.rs  service.rs
src/config/: app.rs  channel.rs  env.rs  llm.rs  media.rs  mod.rs  tool.rs
src/engine/: llm.rs  planner.rs  runner.rs  state.rs  tests.rs  types.rs  util.rs
src/forms/: mod.rs
src/logging/: channel.rs  engine.rs  http.rs  learning.rs  llm.rs  mod.rs  preview.rs  startup.rs
src/models/: gemini.rs  mod.rs  openai_compatible.rs
src/tools/: builtin.rs  context.rs  exec.rs  mod.rs  registry.rs  types.rs
src/web/: cors.rs  handlers.rs  mod.rs  router.rs  state.rs  types.rs  util.rs
